# SimpleCMakeList

./: .gitignore  .gitmodules  CMakeLists.txt  FindMylib.cmake  LICENSE  README.md  README2.md
Examples/: main.c  multithreading_safe.c  thread_demo.c
cmake/: FindCheck.cmake
docs/: CMakeLists.txt  Makefile  conf.py.in  index.rst  make.bat
examples/: array_of_fcn_ptr.c  command_line_args.c  fcn_ptr_as_arg.c  function_ptr_as_struct_member.c  main.c  mem_leak_checking.c  multithreading_advance.c  pointer_to_functions.c  pointer_to_functions1.c  pointer_to_functions2.c  pointer_to_functions3.c  random_test.c  return_fcn_ptr.c  simple_pointer.c  singlyLinkedList.c  singlyLinkedList2.c  unix_c.c  variable_argument_func.c
examples/file_RW/: my_first_file.txt  my_second_file.txt  read_number_from_file.c  read_until_EOF.c  read_until_end_of_file.c
headers/: cube.h  functions.h  square.h
sources/: functions.c  main.c
sources1/: cube.c
sources2/: square.c
test/: CMakeLists.txt
